Fix overflow scroll main for overflow: auto to avoid scroll bars in windows/IE

--- a/turret/_mixins.css
+++ b/turret/_mixins.css
@@ -131,7 +131,7 @@
    */
 
   --overflow-scroll: {
-    overflow: scroll;
+    overflow: auto;
     -webkit-overflow-scrolling: touch;
   }
 
